; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_file.c_mac_file_check_lock.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_file.c_mac_file_check_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { i32 }
%struct.fileglob = type { i32 }
%struct.flock = type { i32 }

@file_check_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_file_check_lock(%struct.ucred* %0, %struct.fileglob* %1, i32 %2, %struct.flock* %3) #0 {
  %5 = alloca %struct.ucred*, align 8
  %6 = alloca %struct.fileglob*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.flock*, align 8
  %9 = alloca i32, align 4
  store %struct.ucred* %0, %struct.ucred** %5, align 8
  store %struct.fileglob* %1, %struct.fileglob** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.flock* %3, %struct.flock** %8, align 8
  %10 = load i32, i32* @file_check_lock, align 4
  %11 = load %struct.ucred*, %struct.ucred** %5, align 8
  %12 = load %struct.fileglob*, %struct.fileglob** %6, align 8
  %13 = load %struct.fileglob*, %struct.fileglob** %6, align 8
  %14 = getelementptr inbounds %struct.fileglob, %struct.fileglob* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load %struct.flock*, %struct.flock** %8, align 8
  %18 = call i32 @MAC_CHECK(i32 %10, %struct.ucred* %11, %struct.fileglob* %12, i32 %15, i32 %16, %struct.flock* %17)
  %19 = load i32, i32* %9, align 4
  ret i32 %19
}

declare dso_local i32 @MAC_CHECK(i32, %struct.ucred*, %struct.fileglob*, i32, i32, %struct.flock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
